--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <ol>
                 <li>Выворачиваемый тор с дыркой</li>
                 <li>Ленты мёбиуса для разрезания</li>
-                <li>Лестница Якова</li>
+                <li>Лестницы Якова</li>
             </ol>
         </li>
     </ol>
