--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
         </li>
     </ol>
 
-    <p>Страницы Полозкова Сергея Сергеевича на ГитХабе и в ВК (для связи с автором):<br><br>
+    <p>Страницы Полозкова Сергея Сергеевича для связи:<br><br>
+        Телеграм:<br>
+        <a href="https://t.me/polozkov94">t.me/polozkov94</a><br>
         ГИТХАБ:<br>
         <a href="https://github.com/polozkov">github.com/polozkov</a><br>
         ВКонтакте:<br>
