Первый после фестивал - сокращаю

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
                 width: 45%;
             }
         }
-
+        
         ol ol {
             list-style-type: lower-alpha;
         }
 
-        
+        h2 {
+            background-color: #FF6;
+        }
     </style>
 </head>
 
@@ -28,7 +30,8 @@
     <h1>Фестиваль журнала «Квантик» 2022 в Новой школе</h1>
 
     <p>
-        Дата и место проведения: 29 октября 2022, суббота; Москва, Мосфильмовская улица 88, корпус 5, Новая школа, метро Раменки, Солнцевская (жёлтая) линия.<br><br> Журнал «Квантик»: <a href="https://kvantik.com/">kvantik.com</a><br><br> Новая Школа на Мосфильмовской:
+        Дата и место проведения: 29 октября 2022, суббота; Москва, Мосфильмовская улица 88, корпус 5, Новая школа, метро Раменки, Солнцевская (жёлтая) линия.<br><br> Журнал «Квантик»: <a href="https://kvantik.com/">kvantik.com</a><br><br> Новая Школа
+        на Мосфильмовской:
         <a href="https://home.n.school/">home.n.school</a>
     </p>
     <p>
@@ -85,15 +88,105 @@
         </li>
     </ol>
 
-    <p>Страницы Полозкова Сергея Сергеевича для связи:<br><br>
-        Телеграм:<br>
-        <a href="https://t.me/polozkov94">t.me/polozkov94</a><br>
-        ГИТХАБ:<br>
-        <a href="https://github.com/polozkov">github.com/polozkov</a><br>
-        ВКонтакте:<br>
+    <p>Страницы Полозкова Сергея Сергеевича для связи:<br><br> Телеграм:
+        <br>
+        <a href="https://t.me/polozkov94">t.me/polozkov94</a><br> ГИТХАБ:
+        <br>
+        <a href="https://github.com/polozkov">github.com/polozkov</a><br> ВКонтакте:
+        <br>
         <a href="https://vk.com/polozkov94">vk.com/polozkov94</a><br>
-    </p><br>
+    </p>
 
+    <h1>Полозков Сергей - описание авторских проектов</h1>
+    <h2>Волчки</h2>
+
+    <h3>Волчок. Оригами с резинкой.</h3>
+    <p>Автор: Полозков С.С. Публикация в журнале "Квант" 2020-03, на обороте титульной обложки в разделе "Коллекция головоломок". Волчок изготавливается из плотной бумаги или цветного картона. Сторона квадратной заготовки в статье равна 14 см. Крепление
+        на скотче или на резинке. Резинка для плетения браслетов (или маленькая для волос) цепляется за надрезы.
+    </p>
+
+    <h3>Волчок. Оригами из двух квадратов.</h3> 
+<p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-10, стр. 18-19 в разделе "Своими руками". Две оригами фигуры. Квадрат со сторонй 10 см. из плотной бумаге складывается в "тюльман", а сверху надевается
+    колпачок из квадрата со стороной 8 см. Колпачок - это оригами-фигура "двойной треугольник".</p>
+
+    <h3>Волчок. Круговой с зубочистками.</h3>
+<p>Представляет собой картонный диск с отверстием для зубочистки. Для прочности к центру загнуты четыре лепестка и на каждом лепестке тоже дырка. Зубочистка проходит через 5 отверстий.</p>
+
+    <h3>Волчок. Перевёртыш из пинг-понговских мячей.</h3>
+<p>Автор: Полозков С.С. Готовится публикация в Квантике в 2023 году. Двя мячика разных цветов вставляются один в другой, внутри крышка из-под бутылки с отверстием для дюбеля, куда проходит самореза. При
+    вращении шар поднимает центр тяжести (переворачивается другим цветом кверху). Шар уменьшает скорость и переворачивается обратно.</p>
+
+    <h3>Волчок. Перевёртыш (тип-топ или китайский волчок).</h3>
+<p>Сфера с выемкой и ножной. При вращении волчок встаёт на ножку. Материал: металл, дерево, пластик. Деревянные волчки хорошего качества Российского производства.</p>
+
+    <h3>Волчок. Бипирамидальный.</h3>
+<p>Первый экземпляр придуман и изготовлен на фестивале головоломок PuzzleFest и хранится в Музее Головоломок в Москве. Из заготовки из бумаги или картона прорезаются четыре лепестка. Сверху и снизу по два лепестка образуют
+    пирамиду и волчок вращается и сверху, и снизу. Бипирамидальный волчок может быть изготовлен из плстикового динамическоо конструктора "Кликко", фирма "Знаток".</p>
+
+
+    <h2>Вертолёты</h2>
+
+    <h3>Вертолёт. Со скрепкой.</h3><p>Прямоугольная картонная или бумажная полоска имеет два продольных надреза с разных сторон на расстоянии 1/3 и 2/3. Собирается изогнутый треугольник и фиксируется скрепкой. При падении конструкция вращается.</p>
+
+    <h3>Вертолёт. Бумага 100%.</h3>
+<p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-08, стр. 24-25 в разделе "Своими руками". В прямоугольной бумажной заготовки делаем два Г-ограззных надлеза, сворачиваем изогнутый треугольник с углом 30 градусов
+    в нижней части. При падении вертолёт вращается. Может использоваться как визитка.</p>
+
+
+    <h2>Флексагоны</h2>
+
+    <h3>Флексагон. Флексотримино.</h3>
+<p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-05, стр. 14-18 в разделе "Игры и головоломки". Трансформер - это три квадратных бумажных флексагона, которые принимают форму "палочки", "ступеньки" и "пропеллера".
+    Ещё тримино может выворачиваться наоборот (внутренние части будут наружними).</p>
+
+    <h3>Флексагон. Восьмёрка двухцветная.</h3>
+<p>Автор: Полозков С.С. Продолжение флексотримино, состоящие из двух простейших гексафлексагонов, соединённых вместе восьмёркой. Каждый шестиугольник восьмёрки имеет свой цвет. (Например, изготовлен из бумаги своего
+    цвета). Цвета могут перемешиваться. Отличный подарок на восьмое марта, ко дню рождения восмого числа и/или восьмого месяца. Восьмёрка собирается из Конструктора "Кликко", фирма "Знаток".</p>
+
+    <h3>Флексагон. Квадратный без клея.</h3>
+<p>Усовершенствованный флексагон из журнала "Наука и Жизнь" 1976-09, стр. 121-123. Усовершенствована технология: при односторонней печати печатуются обе стороны, а затем лист складывается. Головоломка получается вдвое
+    толще, поэтому подойдёт обычная офисная бумага А4.</p>
+
+    <h3>Флексотрубка. Кефирная прямая.</h3>
+<p>Известная флексторубка Стоуна 1939 года. Цель - вывернуть наизнанку. Головоломка из современной картонной упаковки для ряженки, кефира, сока и. т. д. с квадрастным основанием. Описана в журнале "Квантик" 2018-05.</p>
+
+    <h3>Флексотрубка. Кефирная косая.</h3>
+<p>Изменённая флексторубка Стоуна. Вместо прямоугольника в сложенном виде - параллелограм с не прямыми углами. Цель - вывернуть наизнанку. Решение более запутанное. Головоломка более непонятная, чем классическая версия
+    1939 года.</p>
+
+    <h3>Флексторубка. Кефирная пирамидальная.</h3><p>Изменённая флексторубка Стоуна. Вместо прямоугольника в сложенном виде - два ромбика с углами 120 и 60 "заборчиком". Изюминка в том, что собирается пирамида (тетраэдр), где все рёбра закрыты. Цель - вывернуть
+    наизнанку.</p>
+
+
+    <h2>Конструкторы</h2>
+    <h2>Авторские головоломки</h2>
+    <h2>Матобъекты</h2>
+
+    Конструкторы:
+Магнитные гибкие
+Кольцевые картонные без клея
+Трубогранники разборные
+Многоугольники на резинках
+
+Авторские головоломки:
+Бесконечные соты
+Европодвесы
+Пирамиды из шаров
+Магнитный углокуб
+Пирамиду из двух частей
+
+Матобъекты:
+Выворачиваемый тор с дыркой
+Ленты мёбиуса для разрезания
+Лестницы Якова
+Цепи Герона
+
+
+Конструктор. Магнитный гибкий. Геометрический конструктор с неодимовыми магнитами из гибкого пластика (обложки для переплёта) для сборки многогранников и других 3д фигур. Пластик можно заменить цветным картоном. В домашних условиях магниты крепятся на скотч.
+
+Конструктор. Кольцевой без клея. Полоски и кольца из цветного картона или гибкого пласктика. Кольца - это вершины мноогранников, полоски - это рёбра. Полоски имеют загибы, которые вставляются в кольца, что позволяет собрать, напиример, все правильные и полуправильные многогранники.
+
+Конструктор. Трубогранник разборный. 
 </body>
 
 </html>
