Весь список, только заголовки

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         ol ol {
             list-style-type: lower-alpha;
         }
-
+        
         h2 {
             background-color: #FF6;
         }
@@ -27,10 +27,10 @@
 </head>
 
 <body>
-    <h1>Фестиваль журнала «Квантик» 2022 в Новой школе</h1>
+    <h1>Фестиваль журнала "Квантик" 2022 в Новой школе</h1>
 
     <p>
-        Дата и место проведения: 29 октября 2022, суббота; Москва, Мосфильмовская улица 88, корпус 5, Новая школа, метро Раменки, Солнцевская (жёлтая) линия.<br><br> Журнал «Квантик»: <a href="https://kvantik.com/">kvantik.com</a><br><br> Новая Школа
+        Дата и место проведения: 29 октября 2022, суббота; Москва, Мосфильмовская улица 88, корпус 5, Новая школа, метро Раменки, Солнцевская (жёлтая) линия.<br><br> Журнал "Квантик": <a href="https://kvantik.com/">kvantik.com</a><br><br> Новая Школа
         на Мосфильмовской:
         <a href="https://home.n.school/">home.n.school</a>
     </p>
@@ -39,36 +39,33 @@
     </p>
 
     <ol>
-        <li>Волчки:
+        <li>Вертушки:
             <ol>
-                <li>Оригами с резинками</li>
-                <li>Оригами из двух квадратов</li>
-                <li>Круговые с зубочистками</li>
-                <li>Перевёртыши из мячей для пинг-понга</li>
-                <li>Перевёртыши - китайские тип-топы</li>
-            </ol>
-        </li>
-        <li>Вертолёты:
-            <ol>
-                <li>Со скрепкой</li>
-                <li>Бумага 100%</li>
+                <li>Волчок и колпачок из бумаги</li>
+                <li>Волчок Томсона - перевёртыш тип-топ</li>
+                <li>Волчок Томсона из пинг-понговских мячей</li>
+                <li>Бумажный вертолёт</li>
             </ol>
         </li>
         <li>Флексагоны:
             <ol>
-                <li>Тримино-трансформеры</li>
-                <li>Восьмёрки двухцветные</li>
-                <li>Квадратные без клея</li>
-                <li>Флексотрубки кефирные прямые</li>
-                <li>Флексотрубки кефирные пирамидальные</li>
+                <li>Тримино-трансформер</li>
+                <li>Восьмёрка двухцветная</li>
+                <li>Квадратный без клея</li>
+                <li>Лента из треугольников</li>
+            </ol>
+        </li>
+        <li>Цепочки:
+            <ol>
+                <li>Цепь Герона</li>
+                <li>Лестница Якова</li>
             </ol>
         </li>
         <li>Конструкторы:
             <ol>
                 <li>Магнитные гибкие</li>
-                <li>Кольцевые картонные без клея</li>
                 <li>Трубогранники разборные</li>
-                <li>Многоугольники на резинках</li>
+                <li>Гибий пластиковый на кнопках</li>
             </ol>
         </li>
         <li>Авторские головоломки:
@@ -77,13 +74,7 @@
                 <li>Европодвесы</li>
                 <li>Пирамиды из шаров</li>
                 <li>Магнитный углокуб</li>
-            </ol>
-        </li>
-        <li>Матобъекты:
-            <ol>
-                <li>Выворачиваемый тор с дыркой</li>
-                <li>Ленты мёбиуса для разрезания</li>
-                <li>Лестницы Якова</li>
+                <li>Магнитный шахматный куб Сома</li>
             </ol>
         </li>
     </ol>
@@ -98,95 +89,66 @@
     </p>
 
     <h1>Полозков Сергей - описание авторских проектов</h1>
-    <h2>Волчки</h2>
 
-    <h3>Волчок. Оригами с резинкой.</h3>
-    <p>Автор: Полозков С.С. Публикация в журнале "Квант" 2020-03, на обороте титульной обложки в разделе "Коллекция головоломок". Волчок изготавливается из плотной бумаги или цветного картона. Сторона квадратной заготовки в статье равна 14 см. Крепление
-        на скотче или на резинке. Резинка для плетения браслетов (или маленькая для волос) цепляется за надрезы.
-    </p>
+    <div>
+        <h2>Вертушки.</h2>
 
-    <h3>Волчок. Оригами из двух квадратов.</h3> 
-<p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-10, стр. 18-19 в разделе "Своими руками". Две оригами фигуры. Квадрат со сторонй 10 см. из плотной бумаге складывается в "тюльман", а сверху надевается
-    колпачок из квадрата со стороной 8 см. Колпачок - это оригами-фигура "двойной треугольник".</p>
+        <h3>Вертушка. Волчок и колпачок из бумаги.</h3>
+        <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-10, стр. 18-19 в разделе "Своими руками". Две оригами фигуры. Квадрат со сторонй 10 см. из плотной бумаге складывается в "тюльман", а сверху надевается колпачок из квадрата со стороной 8
+            см. Колпачок - это оригами-фигура "двойной треугольник".</p>
 
-    <h3>Волчок. Круговой с зубочистками.</h3>
-<p>Представляет собой картонный диск с отверстием для зубочистки. Для прочности к центру загнуты четыре лепестка и на каждом лепестке тоже дырка. Зубочистка проходит через 5 отверстий.</p>
+        <h3>Вертушка. Волчок Томсона - перевёртыш тип-топ.</h3>
+        <p>Сфера с выемкой и ножной. При вращении волчок встаёт на ножку. Материал: металл, дерево, пластик. Деревянные волчки хорошего качества Российского производства.</p>
 
-    <h3>Волчок. Перевёртыш из пинг-понговских мячей.</h3>
-<p>Автор: Полозков С.С. Готовится публикация в Квантике в 2023 году. Двя мячика разных цветов вставляются один в другой, внутри крышка из-под бутылки с отверстием для дюбеля, куда проходит самореза. При
-    вращении шар поднимает центр тяжести (переворачивается другим цветом кверху). Шар уменьшает скорость и переворачивается обратно.</p>
+        <h3>Вертушка. Перевёртыш из пинг-понговских мячей.</h3>
+        <p>Автор: Полозков С.С. Готовится публикация в Квантике в 2023 году. Двя мячика разных цветов вставляются один в другой, внутри крышка из-под бутылки с отверстием для дюбеля, куда проходит самореза. При вращении шар поднимает центр тяжести (переворачивается
+            другим цветом кверху). Шар уменьшает скорость и переворачивается обратно.</p>
 
-    <h3>Волчок. Перевёртыш (тип-топ или китайский волчок).</h3>
-<p>Сфера с выемкой и ножной. При вращении волчок встаёт на ножку. Материал: металл, дерево, пластик. Деревянные волчки хорошего качества Российского производства.</p>
+        <h3>Вертушка. Бумажный вертолёт.</h3>
+        <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-08, стр. 24-25 в разделе "Своими руками". В прямоугольной бумажной заготовки делаем два Г-ограззных надлеза, сворачиваем изогнутый треугольник с углом 30 градусов в нижней части. При падении
+            вертолёт вращается. Может использоваться как визитка.</p>
+    </div>
+    <div>
+        <h2>Флексагоны.</h2>
 
-    <h3>Волчок. Бипирамидальный.</h3>
-<p>Первый экземпляр придуман и изготовлен на фестивале головоломок PuzzleFest и хранится в Музее Головоломок в Москве. Из заготовки из бумаги или картона прорезаются четыре лепестка. Сверху и снизу по два лепестка образуют
-    пирамиду и волчок вращается и сверху, и снизу. Бипирамидальный волчок может быть изготовлен из плстикового динамическоо конструктора "Кликко", фирма "Знаток".</p>
+        <h3>Флексагон. Тримино-трансформер.</h3>
+        <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-05, стр. 14-18 в разделе "Игры и головоломки". Трансформер - это три квадратных бумажных флексагона, которые принимают форму "палочки", "ступеньки" и "пропеллера". Ещё тримино может выворачиваться
+            наоборот (внутренние части будут наружними).</p>
 
+        <h3>Флексагон. Восьмёрка двухцветная.</h3>
+        <p>Автор: Полозков С.С. Продолжение флексотримино, состоящие из двух простейших гексафлексагонов, соединённых вместе восьмёркой. Каждый шестиугольник восьмёрки имеет свой цвет. (Например, изготовлен из бумаги своего цвета). Цвета могут перемешиваться.
+            Отличный подарок на восьмое марта, ко дню рождения восмого числа и/или восьмого месяца. Восьмёрка собирается из Конструктора "Кликко", фирма "Знаток".</p>
 
-    <h2>Вертолёты</h2>
+        <h3>Флексагон. Квадратный без клея.</h3>
+        <p>Усовершенствованный флексагон из журнала "Наука и Жизнь" 1976-09, стр. 121-123. Усовершенствована технология: с лицевой стороны печатаются линии и большие цифры. На обороте линий нет - только маленькие цифры. Бумага при печати может "съехать"
+            - а из-за маленького размера цифр они поместятся. Надрезы делаются с запасом.</p>
 
-    <h3>Вертолёт. Со скрепкой.</h3><p>Прямоугольная картонная или бумажная полоска имеет два продольных надреза с разных сторон на расстоянии 1/3 и 2/3. Собирается изогнутый треугольник и фиксируется скрепкой. При падении конструкция вращается.</p>
+        <h3>Флексагон. Лента из треугольников.</h3>
+        <p> Упрощённая версия известной головоломки
+            <a href="http://www.mathkang.org/cite/ligamino.html">Лигамино (ссылка).</a> Китайская головоломка разбирается на треугольники 45-45-90. Разбираемость конструкции поможет решить задачу №52 из конкурса "Квантика" за 2022 год. Автор: Дмитрий Калинин. Условие.
+            У Квантика была пустая, закрытая со всех сторон картонная кубическая коробка. Он разрезал каждую из шести граней этой коробки по какой-то из диагоналей. Могла ли коробка после этого не развалиться на отдельные части?
+            <p>
+    </div>
+    <div>
+        <h2>Цепочки.</h2>
+        <h3>Цепочка. Цепь Герона.</h3>
+        <h3>Цепочка. Лестница Якова.</h3>
+    </div>
+    <div>
+        <h2>Конструкторы.</h2>
+        <h3>Конструктор. Магнитный гибкий.</h3>
+        <h3>Конструктор. Трубогранник разборный.</h3>
+        <h3>Конструктор. Гибкий пластиковый на кнопках.</h3>
+    </div>
+    <div>
+        <h2>Авторские головоломки.</h2>
+        <h3>Головоломка. Бесконечная сота.</h3>
+        <h3>Головоломка. Европодвес.</h3>
+        <h3>Головоломка. Пирамида из шаров.</h3>
+        <h3>Головоломка. Магнитный углокуб.</h3>
+        <h3>Головоломка. Магнитный шахматный куб Сома.</h3>
+    </div>
 
-    <h3>Вертолёт. Бумага 100%.</h3>
-<p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-08, стр. 24-25 в разделе "Своими руками". В прямоугольной бумажной заготовки делаем два Г-ограззных надлеза, сворачиваем изогнутый треугольник с углом 30 градусов
-    в нижней части. При падении вертолёт вращается. Может использоваться как визитка.</p>
-
-
-    <h2>Флексагоны</h2>
-
-    <h3>Флексагон. Флексотримино.</h3>
-<p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-05, стр. 14-18 в разделе "Игры и головоломки". Трансформер - это три квадратных бумажных флексагона, которые принимают форму "палочки", "ступеньки" и "пропеллера".
-    Ещё тримино может выворачиваться наоборот (внутренние части будут наружними).</p>
-
-    <h3>Флексагон. Восьмёрка двухцветная.</h3>
-<p>Автор: Полозков С.С. Продолжение флексотримино, состоящие из двух простейших гексафлексагонов, соединённых вместе восьмёркой. Каждый шестиугольник восьмёрки имеет свой цвет. (Например, изготовлен из бумаги своего
-    цвета). Цвета могут перемешиваться. Отличный подарок на восьмое марта, ко дню рождения восмого числа и/или восьмого месяца. Восьмёрка собирается из Конструктора "Кликко", фирма "Знаток".</p>
-
-    <h3>Флексагон. Квадратный без клея.</h3>
-<p>Усовершенствованный флексагон из журнала "Наука и Жизнь" 1976-09, стр. 121-123. Усовершенствована технология: при односторонней печати печатуются обе стороны, а затем лист складывается. Головоломка получается вдвое
-    толще, поэтому подойдёт обычная офисная бумага А4.</p>
-
-    <h3>Флексотрубка. Кефирная прямая.</h3>
-<p>Известная флексторубка Стоуна 1939 года. Цель - вывернуть наизнанку. Головоломка из современной картонной упаковки для ряженки, кефира, сока и. т. д. с квадрастным основанием. Описана в журнале "Квантик" 2018-05.</p>
-
-    <h3>Флексотрубка. Кефирная косая.</h3>
-<p>Изменённая флексторубка Стоуна. Вместо прямоугольника в сложенном виде - параллелограм с не прямыми углами. Цель - вывернуть наизнанку. Решение более запутанное. Головоломка более непонятная, чем классическая версия
-    1939 года.</p>
-
-    <h3>Флексторубка. Кефирная пирамидальная.</h3><p>Изменённая флексторубка Стоуна. Вместо прямоугольника в сложенном виде - два ромбика с углами 120 и 60 "заборчиком". Изюминка в том, что собирается пирамида (тетраэдр), где все рёбра закрыты. Цель - вывернуть
-    наизнанку.</p>
-
-
-    <h2>Конструкторы</h2>
-    <h2>Авторские головоломки</h2>
-    <h2>Матобъекты</h2>
-
-    Конструкторы:
-Магнитные гибкие
-Кольцевые картонные без клея
-Трубогранники разборные
-Многоугольники на резинках
-
-Авторские головоломки:
-Бесконечные соты
-Европодвесы
-Пирамиды из шаров
-Магнитный углокуб
-Пирамиду из двух частей
-
-Матобъекты:
-Выворачиваемый тор с дыркой
-Ленты мёбиуса для разрезания
-Лестницы Якова
-Цепи Герона
-
-
-Конструктор. Магнитный гибкий. Геометрический конструктор с неодимовыми магнитами из гибкого пластика (обложки для переплёта) для сборки многогранников и других 3д фигур. Пластик можно заменить цветным картоном. В домашних условиях магниты крепятся на скотч.
-
-Конструктор. Кольцевой без клея. Полоски и кольца из цветного картона или гибкого пласктика. Кольца - это вершины мноогранников, полоски - это рёбра. Полоски имеют загибы, которые вставляются в кольца, что позволяет собрать, напиример, все правильные и полуправильные многогранники.
-
-Конструктор. Трубогранник разборный. 
 </body>
 
 </html>
